CSS fix to prevent tab jump

--- a/easydropdown.css
+++ b/easydropdown.css
@@ -54,7 +54,7 @@
 .dropdown select{
 	position: absolute;
 	left: -9999px;
-	top: -9999px;
+	top: 0px;
 }
 
 .dropdown.touch select{
